plugins {
    id "java"
    id "edu.wpi.first.GradleRIO" version "2020.2.1" //"2019.4.1"//"2020.2.1"
    id 'org.openjfx.javafxplugin' version '0.0.5' apply false
    id 'pmd'
}

// Set this to true to enable desktop support.
def includeDesktopSupport = true

allprojects {

    // We want the entire project to be openable in an IDE
	apply plugin: "idea"
	apply plugin: "eclipse"

    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11

}

dependencies {
}
subprojects {
    apply plugin: "java"
    apply plugin: 'pmd'
    pmd {
        ignoreFailures = true
    }
    // Maven central needed for JUnit
    repositories {
        mavenCentral()
        mavenLocal()
        jcenter()
        flatDir {
                // The directory lib is available as a source for dependencies - we put any JAR files here
                // The directory lib will always be one folder "above" a subproject folder - thus the ".."
                dirs '../lib'
            }
	maven { url 'https://jitpack.io' }
    }

    dependencies {
        testCompile 'junit:junit:4.12'
        testCompile "org.mockito:mockito-core:2.+"
    }

    test {
        testLogging {
            events "passed", "skipped", "failed"
            exceptionFormat "full"
        }
    }

}
